--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,11 +2,57 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Matthieu Caballero{% endblock %}</title>
+
+        <link rel="stylesheet" href="/bulma.css">
+
         {% block stylesheets %}{% endblock %}
     </head>
-    <body>
+    <body class="has-background-grey">
+
+        {% block header %}
+
+        <nav class="navbar" role="navigation" aria-label="main navigation">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="{{path('home')}} ">
+              MC
+            </a>
+        
+            <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+        
+          <div class="navbar-menu">
+            <div class="navbar-start">
+              <a class="navbar-item" href="#">
+                aaaaa
+              </a>
+        
+              <a class="navbar-item">
+                bbbbb
+              </a>
+        
+      
+            </div>
+        
+      
+          </div>
+        </nav>
+        
+        {% endblock %}
         {% block body %}{% endblock %}
+
+
+        <footer class="footer is-marginless">
+            <div class="content has-text-centered">
+              <p>
+                <strong>Matthieu Caballero</strong> - Développer web et web mobile
+              </p>
+            </div>
+          </footer>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
