--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -33,9 +33,7 @@
       <div class="navbar-end">
         <div class="navbar-item">
           <div class="buttons">
-            <a class="button is-light">
-              Log out
-            </a>
+            <a class="button is-light">Log out</a>
           </div>
         </div>
       </div>
