--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,7 +8,7 @@
 
         {% block stylesheets %}{% endblock %}
     </head>
-    <body class="has-background-grey">
+    <body>
 
         {% block header %}
 
