--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -23,7 +23,7 @@
           Catégories
         </a>
   
-        <a class="navbar-item">
+        <a class="navbar-item" href="{{path('admin_item')}} ">
           Items
         </a>
   
