--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -49,7 +49,7 @@
         <footer class="footer is-marginless">
             <div class="content has-text-centered">
               <p>
-                <strong>Matthieu Caballero</strong> - Développer web et web mobile
+                <strong>Matthieu Caballero</strong> - Développeur web
               </p>
             </div>
           </footer>
