--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,7 +37,17 @@
         
       
             </div>
-        
+            
+            <div class="navbar-end">
+              <div class="navbar-item">
+                {% if app.user %}
+                <div class="buttons">
+                  <a href="{{path('logout')}} " class="button is-light">Log out</a>
+                </div>
+               {% endif %}
+              </div>
+            </div>
+      
       
           </div>
         </nav>
