--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -17,14 +17,14 @@
     <form action="{{path('login')}}" method="POST" style="padding: 2em;">
 
         <div class="field">
-            <label class="label" for="username">Nom d'utilisateur</label>
+            <label class="label has-text-white" for="username">Nom d'utilisateur</label>
             <div class="control">
                 <input type="text" name="_username" id="username" class="input" value="{{last_username}} ">
             </div>
         </div>
 
         <div class="field">
-            <label class="label" for="password">Mot de passe</label>
+            <label class="label has-text-white" for="password">Mot de passe</label>
             <div class="control">
                 <input type="password" name="_password" id="password" class="input">
             </div>
