--- a/public/style.css
+++ b/public/style.css
@@ -18,6 +18,10 @@
     margin: 3em;
 }
 
+.mv0{
+    margin-top: 0;
+    margin-bottom: 0;
+}
 .mv1{
     margin-top: 1em;
     margin-bottom: 1em;
@@ -31,6 +35,23 @@
     margin-bottom: 3em;
 }
 
+.mb1{
+    margin-bottom: 1em; 
+}
+.mb2{
+    margin-bottom: 2em; 
+}
+.mb3{
+    margin-bottom: 3em; 
+}
+
+body{
+    background-image: url('./img/6.jpg');
+    background-color: black;
+    background-attachment:fixed;
+    background-repeat:no-repeat;
+    background-size: cover;
+}
 
 #chapeau{
     position: fixed;
@@ -39,15 +60,19 @@
     z-index: 2;
 }
 #sectionIndex{
-    margin-top: 10em;
+    margin-top: 7em;
+    padding-top: 4em;
+    padding-bottom: 4em;
 }
 
 
 @media screen and (max-width:768px){
 
 #sectionIndex{
-    margin-top: 22em;
+    margin-top: 12em;
+    padding-bottom: 6em;
 }
+
 
 
 }
