--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,12 @@ body{
     background-size: cover;
 }
 
+#photo{
+    position: fixed;
+    top: 5em;
+    left: 1em;
+    z-index: 3;  
+}
 #chapeau{
     position: fixed;
     top: 0;
@@ -65,6 +71,18 @@ body{
     padding-bottom: 4em;
 }
 
+
+
+/* --- Admin -------------------------------------------------------------------------------------------*/
+
+#adminContainer{
+    width: 100%;
+    background-color: white;
+    padding: 1em 5em;
+}
+
+
+/* --- Mobile ------------------------------------------------------------------------------------------*/
 
 @media screen and (max-width:768px){
 
