--- a/templates/admin/admin_category/edit.html.twig
+++ b/templates/admin/admin_category/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'admin/index.html.twig' %}
 
-{% block body %}
+{% block admin %}
 
 <section class="section">
     <h1 class="title">Editer une catégorie</h1>
