--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,6 +29,7 @@
               <p class="is-size-7 mv0">Réalisé avec les frameworks Symfony 5 et Bulma.</p>
             </div>
           </footer>
+        <script src="https://kit.fontawesome.com/2a0888dafb.js" crossorigin="anonymous"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
