--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,8 +11,8 @@
 
 
         {% block stylesheets %}
-          <link rel="stylesheet" href="/bulma.css">
-          <link rel="stylesheet" href="/style.css">
+          <link rel="stylesheet" href="bulma.css">
+          <link rel="stylesheet" href="style.css">
         {% endblock %}
     </head>
     <body>
