--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,6 +15,8 @@
         <div class="level-item has-text-centered">
             <div>
                 <p class="title is-4">Matthieu Caballero</p>
+                <br/>
+                <p class="subtitle is-6">Développeur web</p>
             </div>
         </div>
     </div>
@@ -31,7 +33,7 @@
     {% endfor %}
 
     <div class="level-right">
-        <div class="level-item has-text-centered mv1">
+        <div class="level-item has-text-centered pv1">
 
             <a href="https://www.linkedin.com/in/matthieu-caballero/" title="Allez vers profil linkedin"><i class="fab fa-linkedin-in"></i></a>
 
@@ -45,7 +47,7 @@
 </nav>
 
 
-<section id="sectionIndex" class="container p2 ">
+<section id="sectionIndex" class="container p1 ">
 
     {% for category in categories %}
     <article class="columns has-text-white-ter">
